--- a/views/common/components/data.html.twig
+++ b/views/common/components/data.html.twig
@@ -56,7 +56,7 @@
     {% endif %}
     {% if editMode %}
         {% set inputId = 'i' ~ random(10000) %}
-        <input type="hidden" data-type="{{ type }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-path="{{ path }}" data-width="{{ settings.width | default(0) }}" data-height="{{ settings.height | default(0) }}"/>
+        <input type="hidden" data-type="{{ type }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-path="{{ path }}" data-settings='{{ settings | json_encode }}'/>
         <edim class="edit-image" data-fancybox data-src="/filemanager/dialog.php?type=1&lang=ru&relative_url=1&field_id={{ inputId | raw }}" data-type="iframe"><img id="{{ inputId | raw }}-image" src="{{ value | raw }}"{% for key,val in attrs %} {{ key | raw }}="{{ val | raw }}"{% endfor %}></edim>
     {% else %}
         <img src="{{ value | raw }}"{% for key,val in attrs %} {{ key | raw }}="{{ val | raw }}"{% endfor %}>
@@ -67,7 +67,7 @@
     {% import _self as data %}
     {% if editMode %}
         {% set inputId = 'i' ~ random(10000) %}
-        <input type="hidden" data-type="{{ type }}" data-path="{{ path }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-width="{{ settings.width | default(0) }}" data-height="{{ settings.height | default(0) }}"/>
+        <input type="hidden" data-type="{{ type }}" data-path="{{ path }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-settings='{{ settings | json_encode }}'/>
         <edim class="edit-image" data-fancybox data-src="/filemanager/dialog.php?type=1&lang=ru&relative_url=1&field_id={{ inputId | raw }}" data-type="iframe"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span></edim>
     {% endif %}
 {% endmacro %}
@@ -79,13 +79,13 @@
     {% endif %}
     {% if editMode %}
         {% set inputId = 'i' ~ random(10000) %}
-        <input type="hidden" data-type="{{ type }}" data-path="{{ path }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-width="{{ settings.width | default(0) }}" data-height="{{ settings.height | default(0) }}"/>
+        <input type="hidden" data-type="{{ type }}" data-path="{{ path }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-settings='{{ settings | json_encode }}'/>
         <edim class="edit-image" data-fancybox data-src="/filemanager/dialog.php?type=1&lang=ru&relative_url=1&field_id={{ inputId | raw }}" data-type="iframe"><img id="{{ inputId | raw }}-preview" src="{{ value | replace({'/source/': '/thumbs/'}) }}" /></edim>
     {% endif %}
 {% endmacro %}
 
 {% macro addImagePreviewButton(type, path, id, editMode = false, caption = "Добавить элемент", settings = {}) %}
-    {% if editMode %}<button type="button" class="btn btn-primary btn-add-image-preview" data-type="{{ type }}" data-path="{{ path | raw }}" data-pk="{{ id }}" data-width="{{ settings.width | default(0) }}" data-height="{{ settings.height | default(0) }}">{{ caption }}</button>{% endif %}
+    {% if editMode %}<button type="button" class="btn btn-primary btn-add-image-preview" data-type="{{ type }}" data-path="{{ path | raw }}" data-pk="{{ id }}" data-settings='{{ settings | json_encode }}'>{{ caption }}</button>{% endif %}
 {% endmacro %}
 
 {% macro select(type, value, id, path, editMode = false, options = [], inSettings = false) %}
