--- a/views/common/components/data.html.twig
+++ b/views/common/components/data.html.twig
@@ -255,7 +255,7 @@
                                 {% elseif editor.type == "image" %}
                                     <tr>
                                         <td>{{ editor.title }}</td>
-                                        <td style="width:40%;">{{ data.setImagePreviewButton(collection, cValue, itemId, cPath, editMode) }}</td>
+                                        <td style="width:40%;">{{ data.setImagePreviewButton(collection, cValue, itemId, cPath, editMode, '/source/previewDefault.jpg', editor.settings) }}</td>
                                     </tr>
                                 {% elseif editor.type == "checklist" %}
                                     <tr>
@@ -270,7 +270,7 @@
                                                 {% for ki, image in cValue %}
                                                     <div class="pull-left editor-image-list-element" id="{{ (cPath ~ '.' ~ ki) | replace({'.' : '-'}) }}-container">
                                                         {% set imagePath = cPath ~ '.' ~ ki %}
-                                                        {{ data.setImagePreviewButton(collection, image, itemId, imagePath, editMode) }}
+                                                        {{ data.setImagePreviewButton(collection, image, itemId, imagePath, editMode, '/source/previewDefault.jpg', editor.settings) }}
                                                         {{ data.removeElementButton(collection, imagePath, itemId, editMode, true ) }}
                                                     </div>
                                                 {% endfor %}
