Добавил возможность загружать и выбирать обычные файлы, отличные от картинок

--- a/views/common/components/data.html.twig
+++ b/views/common/components/data.html.twig
@@ -63,13 +63,18 @@
     {% endif %}
 {% endmacro %}
 
-{% macro setImageButton(type, value, id, path, editMode = false, settings = {}) %}
+{% macro setFileButton(type, value, id, path, editMode = false, settings = {}, dialogType = "file") %}
     {% import _self as data %}
     {% if editMode %}
         {% set inputId = 'i' ~ random(10000) %}
-        <input type="hidden" data-type="{{ type }}" data-path="{{ path }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-settings='{{ settings | json_encode }}'/>
-        <edim class="edit-image" data-fancybox data-src="/filemanager/dialog.php?type=1&lang=ru&relative_url=1&field_id={{ inputId | raw }}" data-type="iframe"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span></edim>
+        <input type="hidden" data-type="{{ type }}" data-path="{{ path }}" id="{{ inputId | raw }}" data-pk="{{ id }}" data-settings='{{ settings | json_encode }}' data-dialog-type="{{ dialogType }}"/>
+        <edim class="edit-image" data-fancybox data-src="/filemanager/dialog.php?type={% if dialogType == "file"%}2{% else %}1{% endif %}&lang=ru&relative_url=1&field_id={{ inputId | raw }}" data-type="iframe"><span class="glyphicon glyphicon-{% if dialogType == "file"%}file{% else %}picture{% endif %}" aria-hidden="true"></span></edim>
     {% endif %}
+{% endmacro %}
+
+{% macro setImageButton(type, value, id, path, editMode = false, settings = {}) %}
+    {% import _self as data %}
+    {{ data.setFileButton(type, value, id, path, editMode, settings, "picture") }}
 {% endmacro %}
 
 {% macro setImagePreviewButton(type, value, id, path, editMode = false, default = '/source/previewDefault.jpg', settings = {}) %}
@@ -256,6 +261,11 @@
                                     <tr>
                                         <td>{{ editor.title }}</td>
                                         <td style="width:40%;">{{ data.setImagePreviewButton(collection, cValue, itemId, cPath, editMode, '/source/previewDefault.jpg', editor.settings) }}</td>
+                                    </tr>
+                                {% elseif editor.type == "file" %}
+                                    <tr>
+                                        <td>{{ editor.title }}</td>
+                                        <td style="width:40%;">{{ data.setFileButton(collection, cValue, itemId, cPath, editMode, editor.settings) }}</td>
                                     </tr>
                                 {% elseif editor.type == "checklist" %}
                                     <tr>
