--- a/web/plugins/edit-tools/edit-tools.css
+++ b/web/plugins/edit-tools/edit-tools.css
@@ -30,3 +30,9 @@ ae span {
     margin-right: 25px;
     margin-bottom: 25px;
 }
+
+@media (max-width: 425px) {
+    .fancybox-slide--iframe .fancybox-content {
+        width: 96%;
+    }
+}
