--- a/views/common/components/admin.html.twig
+++ b/views/common/components/admin.html.twig
@@ -84,6 +84,8 @@
                                     {{ data.checklist(type, item[field.name], item._id, field.name, not field.readonly, field.variants) }}
                                 {% elseif field.type =='textarea' or (field.type == 'dependsOnItem' and item.type == 'textarea') %}
                                     {{ data.textarea(type, item[field.name], item._id, field.name, not field.readonly) }}
+                                {% elseif field.type =='image' or (field.type == 'dependsOnItem' and item.type == 'image') %}
+                                    {{ data.image(type, item[field.name], item._id, field.name, not field.readonly, {}, '/source/previewDefault.jpg', item.settings) }}
                                 {% else %}
                                     {{ data.text(type, item[field.name], item._id, field.name, not field.readonly) }}
                                 {% endif %}
@@ -206,7 +208,8 @@
                 'type': 'select',
                 'options': [
                     {value: 'text', text: 'Однострочный текст'},
-                    {value: 'textarea', text: 'Многострочный текст'}
+                    {value: 'textarea', text: 'Многострочный текст'},
+                    {value: 'image', text: 'Изображение'}
                 ]
             }, {
                 'name': 'title',
